# policyrcd-script-zg2

./: Makefile.in  aclocal.m4  configure  configure.in
debian/: TODO  changelog  control  postinst  prerm  rules
debian/patches/: bash-sh  manpage  series
scripts/: Makefile.am  Makefile.in  zg-policy-rc.d  zg-policy-rc.d.pod
