#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(policyrcd-script-zg2, 0.1, mh+debian-packages@zugschlus.de)
AM_INIT_AUTOMAKE(policyrcd-script-zg2, 0.1)

# Checks for programs.
AC_PROG_LN_S

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 scripts/Makefile])
AC_OUTPUT
